--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@
 body {
     background-color: #1a1924;
     font-size: 1.6rem;
-    color: white;
+    color: #E1E1E6;
 }
 
 body * {
     /*border: 0.1rem solid red;*/
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -31,9 +32,16 @@ body * {
     grid-template-rows: max-content 1fr max-content;
 }
 
-#user-info img {
+#top {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+#user-info {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
 }
 
 #user-info img {
@@ -41,4 +49,48 @@ body * {
     height: 48px;
     object-fit: cover;
     border-radius: 50%;
+}
+
+#user-status .status::before {
+    content: "";
+    width: 0.8rem;
+    height: 0.8rem;
+    display: block;
+    background-color: #00B37E;
+    border-radius: 50%;
+}
+
+#user-status .status::before {
+    content: "";
+    width: 0.8rem;
+    height: 0.8rem;
+    display: block;
+    background-color: #00B37E;
+    border-radius: 50%;
+}
+
+#user-status .status {
+    color: #00B37E;
+    display: flex;
+    align-items: baseline;
+    gap: 0.4rem;
+    margin-top: 0.4rem;
+    font-size: 1.2rem;
+}
+
+#last-seen {
+    margin-top: 2.6rem;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+}
+
+.messages {
+    margin-top: 3rem;
+    display: grid;
+    gap: 3rem;
+}
+
+.message {
+
 }
