--- a/style.css
+++ b/style.css
@@ -89,8 +89,30 @@ body * {
     margin-top: 3rem;
     display: grid;
     gap: 3rem;
+    font-size: 1.2rem;
+    line-height: 1.4rem;
 }
 
-.message {
+.message .body {
+    margin-top: 1rem;
+    background-color: #633BBC;
+    padding: 1.4rem;
+    border-radius: 0 .8rem .8rem .8rem;
+}
 
+.message:not(.you) {
+    width: 60vw;
+}
+
+.message.you {
+    margin-left: auto;
+}
+
+.message.you .top {
+    text-align: right;
+}
+
+.message.you .body {
+    background-color: #07847E;
+    border-radius: .8rem .8rem 0 .8rem;
 }
