--- a/style.css
+++ b/style.css
@@ -116,3 +116,32 @@ body * {
     background-color: #07847E;
     border-radius: .8rem .8rem 0 .8rem;
 }
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    background: #282843;
+    border-radius: 999rem;
+    padding: 1.4rem 2.4rem;
+}
+
+.input-wrapper input {
+    flex: 1;
+}
+
+.input-wrapper input::placeholder {
+    color: #E1E1E6;
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+}
+
+
+.input-wrapper button i {
+   color: #E1E1E6;
+    font-size: 2.4rem;
+}
+
+input, button {
+    background-color: transparent;
+    border: 0;
+}
