--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     background-color: #1a1924;
     font-size: 1.6rem;
     color: #E1E1E6;
+    height: 100vh;
+    overflow: hidden;
 }
 
 body * {
@@ -27,9 +29,11 @@ body * {
 
     height: 100vh;
     width: 100vw;
+    max-width: 880px;
 
     display: grid;
     grid-template-rows: max-content 1fr max-content;
+    margin: auto;
 }
 
 #top {
@@ -93,15 +97,25 @@ body * {
     line-height: 1.4rem;
 }
 
+#messages {
+    overflow-y: scroll;
+    padding-bottom: 2.4rem;
+}
+
+#messages::-webkit-scrollbar {
+    display: none;
+}
+
 .message .body {
     margin-top: 1rem;
     background-color: #633BBC;
     padding: 1.4rem;
     border-radius: 0 .8rem .8rem .8rem;
+    width: fit-content;
 }
 
 .message:not(.you) {
-    width: 60vw;
+    width: 40vw;
 }
 
 .message.you {
@@ -117,7 +131,7 @@ body * {
     border-radius: .8rem .8rem 0 .8rem;
 }
 
-.input-wrapper {
+form {
     display: flex;
     align-items: center;
     background: #282843;
@@ -125,19 +139,25 @@ body * {
     padding: 1.4rem 2.4rem;
 }
 
-.input-wrapper input {
+ input {
     flex: 1;
+    outline: none;
+    color: #E1E1E6;
 }
 
-.input-wrapper input::placeholder {
+form:focus-within {
+    outline: .2rem solid white;
+}
+
+ input::placeholder {
     color: #E1E1E6;
     font-size: 1.2rem;
     line-height: 1.4rem;
 }
 
 
-.input-wrapper button i {
-   color: #E1E1E6;
+ button i {
+    color: #E1E1E6;
     font-size: 2.4rem;
 }
 
